# paramrf

./: LICENSE  README.md  pyproject.toml
examples/: fit_cable.py
examples/data/: 10m_cable.s2p
paramrf/fitting/: __init__.py  fitter.py  target.py
paramrf/misc/: __init__.py
paramrf/modeling/: __init__.py  networks.py  system.py
paramrf/modeling/elements/: distributed.py  lumped.py  topological.py
paramrf/modeling/models/: __init__.py  cables.py  connectors.py  lines.py  misc.py  physical.py
paramrf/plotting/: __init__.py  plotter.py
paramrf/rf/: passive.py
paramrf/simulation/: __init__.py  sampler.py
paramrf/statistics/: __init__.py  features.py  likelihood.py  modifiers.py  parameters.py  pdf.py
pmrf/core/: __init__.py  core.py  networks.py
pmrf/fitting/: __init__.py  fitter.py  target.py
pmrf/misc/: __init__.py  analysis.py  inspection.py  math.py  other.py  structures.py
pmrf/modeling/: __init__.py  networks.py  system.py
pmrf/modeling/elements/: distributed.py  lumped.py  topological.py
pmrf/modeling/models/: __init__.py  cables.py  connectors.py  lines.py  misc.py  physical.py
pmrf/plotting/: __init__.py  figure.py  plotter.py
pmrf/rf/: circuits.py
pmrf/simulation/: __init__.py  sampler.py
pmrf/statistics/: __init__.py  features.py  likelihood.py  modifiers.py  parameters.py
